package it.polimi.ingsw.model.gameflowmanager.states;

import it.polimi.ingsw.model.gameflowmanager.manager.GameFlowManager;

public class PlayCardState extends GameState {
    public PlayCardState(GameFlowManager gameFlowManager) {
        super(gameFlowManager);
    }

    public void dummy() {};
}
